# ajinux

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.sh  out.d  startup.lldb
.cargo/: config.toml
kernel/: Cargo.toml  build.rs
kernel/cc/: test.c  test.h
kernel/cc/asm/: test8.s
kernel/src/: lib.rs  main.rs  r0s  test_kern.rs
kernel/src/addr/: mod.rs
kernel/src/allocator/: kernel_alloc.rs  lmm_allocator.rs  mod.rs  page_alloc.rs  physical_mem.rs  physical_mem_manager.rs
kernel/src/cc/: mod.rs
kernel/src/datastructures/: mod.rs
kernel/src/datastructures/no_alloc/: linked_list.rs  mod.rs  ringbuffer.rs
kernel/src/descriptors/: gdt.rs  idt.rs  mod.rs  reg.rs  segmentation.rs
kernel/src/devices/: keyboard.rs  mod.rs  pic8259.rs  pit.rs  port.rs  serial.rs  vga.rs
kernel/src/interrupts/: keyboard.rs  mod.rs  page_fault.rs  setup.rs  timer.rs
kernel/src/io/: reader.rs  writer.rs
kernel/src/loader/: mod.rs
kernel/src/logging/: mod.rs  serial_log.rs  serial_print.rs  vga_log.rs  vga_print.rs
kernel/src/paging/: mod.rs  normal.rs
kernel/src/process/: mod.rs  tcb.rs
kernel/src/sync/: mod.rs
kernel/src/threading/: mod.rs
kernel/src/utils/: asm.rs  asm_helper.rs  mod.rs  ptr_utils.rs
os/: Cargo.toml  README.md
os/src/: main.rs  test_kern.rs
rs_os/: Cargo.toml  debug.sh
rs_os/.cargo/: config.toml
rs_os/src/: asm.rs  main.rs  timer.rs  vga.rs  writer.rs
rs_os/src/addr/: mod.rs
rs_os/src/datastructures/: ringbuffer.rs
rs_os/src/descriptors/: gdt.rs  idt.rs  idt2.rs  mod.rs  segmentation.rs
rs_os/src/devices/: keyboard.rs  mapping.txt  mod.rs  pic.rs  port.rs  timer.rs  vga.rs
rs_os/src/interrupts/: mod.rs  setup.rs  timer.rs
rs_os/src/logging/: mod.rs  vga_log.rs  vga_print.rs  writer.rs
rs_os/src/mystd/: mod.rs  vga_log.rs  vga_print.rs
rs_os/src/sync/: shitlock.rs  spinlock.rs
rs_os/src/utils/: asm.rs  bytes.rs  mod.rs
user/tests/: Makefile  README.md  crt0.c
user/tests/progs/: simple.c
user_tests/: Cargo.toml  build.rs
user_tests/src/: bytes.rs  lib.rs
