[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.2"
bitfield-struct = "0.5.4"
bitflags = "2.4.0"
bootloader = {version = "0.9.23", features = ["map_physical_memory"]}
volatile = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
[profile.test]
panic = "unwind"


[build-dependencies]
cc = "1.0"
glob = "0.3.1"

